src/sk4rbonka/main/default/objects/sk4_cumulation__c/sk4_cumulation__c.object-meta.xml
<CustomObject>
    <label>Cumulation</label>
    <nameField>
        <displayFormat>CML-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cumulations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>