src/sk4rbonka/main/default/objects/sk4_cumulation__c/fields/sk4_cumulationDate__c.field-meta.xml
<CustomField>
    <fullName>sk4_cumulationDate__c</fullName>
    <label>Cumulation Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>