src/sk4rbonka/main/default/objects/sk4_cumulation__c/fields/sk4_cumulationMonth__c.field-meta.xml
<CustomField>
    <fullName>sk4_cumulationMonth__c</fullName>
    <formula>MONTH(sk4_cumulationDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cumulation Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>