src/sk4rbonka/main/default/objects/sk4_cumulation__c/fields/sk4_cumulationYear__c.field-meta.xml
<CustomField>
    <fullName>sk4_cumulationYear__c</fullName>
    <formula>YEAR(sk4_cumulationDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cumulation Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>