src/sk4rbonka/main/default/objects/sk4_cumulation__c/fields/sk4_family__c.field-meta.xml
<CustomField>
    <fullName>sk4_family__c</fullName>
    <label>Family</label>
    <referenceTo>sk4_family__c</referenceTo>
    <relationshipLabel>Cumulations</relationshipLabel>
    <relationshipName>Cumulations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>