src/sk4rbonka/main/default/objects/sk4_cumulation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>sk4_cumulationDate__c</columns>
    <columns>sk4_cumulationMonth__c</columns>
    <columns>sk4_cumulationYear__c</columns>
    <columns>sk4_family__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>